--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.6",
